# mdbook_render

./: Cargo.toml
mdBook_html_files/: book.toml
mdBook_html_files/src/: 2..md  2.1.100.md  2.2.2.200.md  2.2.2.4..md  2.2.2.4.2..md  2.2.2.4.3..md  2.2.200.md  2.4.400.md  2.5.1.900.md  3.2..md  4..md  6.1.6..md  7.2.1.7.020211229.md  7.5.1.8.020220525.md  SUMMARY.md
src/: create_mdbook.rs  create_mdfiles.rs  main.rs
src/mdBook_html_files/: book.toml
src/mdBook_html_files/src/: 1.2.인터페이스및전송모드.md  1.3.1.Base64.md  1.3.인코딩_디코딩.md  1.개요.md  2.1.1.M120QR-CPM용전처리요청메시지.md  2.2.2.2.PUSH.md  2.2.2.4.2.BLE+QR-MPMindirectmode.md  2.2.2.4.3.BLE+QR-CPMindirectmode.md  2.2.2.4.BLE.md  2.2.2.인터페이스별M200전송방법.md  2.2.200-VP요청단계.md  2.3.300-VP준비단계.md  2.5.900-기타.md  2.메시지규격.md  3.오류코드.md  6.1.BLE인터페이스메시지.md  6.부록.md  7.1.v1.6.3_2021-12-17.md  7.ReleaseNotes.md  SUMMARY.md
src/mdFiles/: 1.2.1.인터페이스.md  1.2.2.송신모드.md  2.2.1.M200VP요청메시지.md  2.2.2.1.QR-MPM.md  2.2.2.3.App2App.md  2.2.2.4.1.공통.md  2.2.2.4.2.BLE+QR-MPMindirectmode.md  2.2.2.4.3.BLE+QR-CPMindirectmode.md  2.2.2.4.BLE.md  2.2.2.5.NFC.md  2.2.2.인터페이스별M200전송방법.md  2.2.200-VP요청단계.md  2.3.1.M310Profile요청메시지.md  2.3.2.M320Image요청메시지.md  2.5.1.2.신분증앱이verifier에오류응답.md  2.메시지규격.md  5.1.2.1.절차2.md  5.1.2.2.절차4.md  5.예시.md  6.1.2.ack.md  6.1.3.profile.md  6.1.4.vp.md  6.1.5.finish.md  7.4.v1.7.2_2022-01-26.md  SUMMARY.md
src/testBook/: book.toml
src/testBook/src/: 1.1.용어.md  2.1.2.M150QR기반BLE용전처리요청메시지.md  2.2.2.4.2.BLE+QR-MPMindirectmode.md  2.2.2.4.3.BLE+QR-CPMindirectmode.md  2.4.1.M400VP제출메시지.md  (+10 more)
src_ori/: create_mdfiles.rs
